--- a/app/views/misc_templates/actors.erb
+++ b/app/views/misc_templates/actors.erb
@@ -9,12 +9,14 @@
     <th> </th>
   </tr>
 
+<%@actor_array.each do |actor|%>
   <tr>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-</tr>
+      <td><%=@actor_id=actor.id%></td>
+      <td><img src="<%=@actor_image=actor.image%>" style="width:250px;"></td>
+      <td><%=@actor_name=actor.name%></td>
+      <td><%=@director_dob=actor.dob%></td>
+      <td><a href="/actors/@actor_id">Show details</a></td>
+    </tr>
+  <%end%>
 
 </table>
