--- a/app/views/misc_templates/directors.erb
+++ b/app/views/misc_templates/directors.erb
@@ -19,7 +19,7 @@
       
       <td><%=@director_name=director.name%></td>
       <td><%=@director_dob=director.dob%></td>
-      <td><a href="/directors/@director_id">Show details</a></td>
+      <td><a href="/directors/<%=@director_id%>">Show details</a></td>
     </tr>
   <%end%>
   
