--- a/app/views/misc_templates/actor_page.erb
+++ b/app/views/misc_templates/actor_page.erb
@@ -1,20 +1,21 @@
-<h1> Actor blank details</h1>
+<h1> Actor #<%=@actor_id%> details</h1>
 <a href="/actors">Go back</a>
 <hr>
 
 <dl>
+<%@actor=Actor.where({:id => @actor_id}).first%>
 <dt>Name</dt>
-  <dd></dd>
+  <dd><%=@actor.name%></dd>
 <dt>Dob</dt>
-  <dd></dd>
+  <dd><%=@actor.dob%></dd>
 <dt>Bio</dt>
-  <dd></dd>
+  <dd><%=@actor.bio%></dd>
 <dt>Image</dt>
-  <dd></dd>
+  <dd><img src="<%=@actor.image%>"style="width:250px;"></dd>
 <dt>Created at</dt>
-  <dd></dd>
+  <dd><%=@actor.created_at%></dd>
 <dt>Updated at</dt>
-  <dd></dd>
+  <dd><%=@actor.updated_at%></dd>
 </dl>
 
 
@@ -30,11 +31,16 @@
     <th> </th>
   </tr>
 
+
+<%@filmography.each do |film|%>
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><%=Movie.where({:id => film.movie_id}).first.title%></td>
+    <td><%=Movie.where({:id => film.movie_id}).first.year%></td>
+    <%@director_id=Movie.where({:id => film.movie_id}).first.director_id%>
+    <td><%=Director.where({:id => @director_id}).first.name%></td>
+    <td><%=film.name%></td>
+    <%@movie_id=film.movie_id%>
+    <td><a href="/movies/<%=@movie_id%>">Show details</a></td>
   </tr>
+  <%end%>
 </table>
