--- a/app/views/misc_templates/movies.erb
+++ b/app/views/misc_templates/movies.erb
@@ -10,12 +10,18 @@
     <th> </th>
   </tr>
 
+ <%@movie_array.each do |movie|%>
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
+      <td><%=@movie_id=movie.id%></td>
+      <td><img src="<%=@movie_image=movie.image%>" style="width:250px;"></td>
+      
+      <td><%=@movie_title=movie.title%></td>
+      <td><%=@movie_year=movie.year%></td>
+      <%@movie_director_id=movie.director_id%>
+      <%@movie_director_name=Director.where({:id => @movie_director_id}).first.name%>
+      <td><%=@movie_director_name%></td>
+      <td><a href="/movies/<%=@movie_id%>">Show details</a></td>
+    </tr>
+  <%end%>
   
 </table>
