--- a/app/views/misc_templates/movie_page.erb
+++ b/app/views/misc_templates/movie_page.erb
@@ -4,19 +4,22 @@
 
 <dl>
 <dt>Title</dt>
-  <dd></dd>
+  <dd><%=@movie.title%></dd>
 <dt>Year</dt>
-  <dd></dd>
+  <dd><%=@movie.year%></dd>
 <dt>Duration</dt>
-  <dd></dd>
+  <dd><%=@movie.duration%></dd>
 <dt>Description</dt>
-  <dd></dd>
+  <dd><%=@movie.description%></dd>
 <dt>Image</dt>
-  <dd></dd>
+  <dd><img src="<%=@movie.image%>" style="width:250px;"></dd>
 <dt>Director</dt>
-  <dd></dd>
+  <%@director=Director.where({:id => @movie.director_id}).first.name%>
+  <dd><%=@director%></dd>
 <dt>Created at</dt>
-  <dd></dd>
+  <dd><%=@movie.created_at%></dd>
 <dt>Updated at</dt>
-  <dd></dd>
+  <dd><%=@movie.updated_at%></dd>
 </dl>
+
+<hr>
