--- a/app/views/misc_templates/director_page.erb
+++ b/app/views/misc_templates/director_page.erb
@@ -3,22 +3,23 @@
 
 <dl>
 <dt>Name</dt>
-  <dd></dd>
+  <dd><%=@director.name%></dd>
 <dt>Dob</dt>
-  <dd></dd>
+  <dd><%=@director.dob%></dd>
 <dt>Bio</dt>
-  <dd></dd>
+  <dd><%=@director.bio%></dd>
 <dt>Image</dt>
-  <dd></dd>
+  <dd><img src="<%=@director.image%>" style="width:250px;"></dd>
 <dt>Created at</dt>
-  <dd></dd>
+  <dd><%=@director.created_at%></dd>
 <dt>Updated at</dt>
-  <dd></dd>
+  <dd><%=@director.updated_at%></dd>
 </dl>
 
 <hr>
 
 <h2>Filmography</h2>
+
 <table border="1">
   <tr>
     <th>ID</th>
@@ -29,12 +30,15 @@
     <th> </th>
   </tr>
 
+<%@filmography.each do |film|%>
   <tr>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
+    <td><%=film.id%></td>
+    <td><img src="<%=film.image%>" style="width:250px;"></td>
+    <td><%=film.title%></td>
+    <td><%=film.year%></td>
+    <td><%=@director.name%></td>
+    <%@movie_id=film.id%>
+    <td><a href="/movies/<%=@movie_id%>">Show details</a></td>
   </tr>
+<%end%>
 </table>
